rnsc/test_data/rns_integration/error/parser/outer_class_sub_directive/trailing_tokens.rns
; Tests that trailing tokens after .outer_class are detected and reported.
; Expected error: E-039 (outer_class trailing tokens)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .outer_class com/profs/Main trailing
.inner_classes_attr_end

.class_end
